--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.2
+  http: ^0.13.4
+  bloc: ^7.0.3
+  flutter_bloc: ^7.0.1
 
 dev_dependencies:
   flutter_test:
