--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^0.13.4
   bloc: ^7.0.3
   flutter_bloc: ^7.0.1
+  get: ^4.6.1
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+  dio: ^4.0.4
+  retrofit: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
